fix: z-index on button config

--- a/css/lgpd.css
+++ b/css/lgpd.css
@@ -246,5 +246,6 @@
     -webkit-box-shadow: -7px 8px 60px -9px rgba(0,0,0,0.66);
     -moz-box-shadow: -7px 8px 60px -9px rgba(0,0,0,0.66);
     box-shadow: -4px 7px 24px -7px rgba(0,0,0,1);
+    z-index: 9999;
 }
 
